--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@
           <h2 class="title-two-level">Our Team</h2>
           <ul class="section-three-list">
             <li class="section-three-img">
-              <img srcset="./images/team/team-1-min.jpg 1x, ./images/team/team-1@2x-min.jpg 2x" src="./images/team/team-1-min.jpg" alt="Mark Guerrero" width="264" />
+              <img
+                srcset="
+                  ./images/team/team-1-min.jpg    1x,
+                  ./images/team/team-1@2x-min.jpg 2x
+                "
+                src="./images/team/team-1-min.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
               <div class="name-team">
                 <h3 class="title-three-level">Mark Guerrero</h3>
                 <p class="p-section section-three-p">Product Designer</p>
@@ -153,7 +161,15 @@
               </div>
             </li>
             <li class="section-three-img">
-              <img srcset="./images/team/team-2-min.jpg 1x, ./images/team/team-2@2x-min.jpg 2x" src="./images/team/team-2-min.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="
+                  ./images/team/team-2-min.jpg    1x,
+                  ./images/team/team-2@2x-min.jpg 2x
+                "
+                src="./images/team/team-2-min.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="name-team">
                 <h3 class="title-three-level">Tom Ford</h3>
                 <p class="p-section">Frontend Developer</p>
@@ -188,7 +204,15 @@
               </div>
             </li>
             <li class="section-three-img">
-              <img srcset="./images/team/team-3-min.jpg 1x, ./images/team/team-3@2x-min.jpg 2x" src="./images/team/team-3-min.jpg" alt="Camila Garcia" width="264" />
+              <img
+                srcset="
+                  ./images/team/team-3-min.jpg    1x,
+                  ./images/team/team-3@2x-min.jpg 2x
+                "
+                src="./images/team/team-3-min.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
               <div class="name-team">
                 <h3 class="title-three-level">Camila Garcia</h3>
                 <p class="p-section">Marketing</p>
@@ -223,7 +247,15 @@
               </div>
             </li>
             <li class="section-three-img">
-              <img srcset="./images/team/team-4-min.jpg 1x, ./images/team/team-4@2x-min.jpg 2x" src="./images/team/team-4-min.jpg" alt="Daniel Wilson" width="264" />
+              <img
+                srcset="
+                  ./images/team/team-4-min.jpg    1x,
+                  ./images/team/team-4@2x-min.jpg 2x
+                "
+                src="./images/team/team-4-min.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
               <div class="name-team">
                 <h3 class="title-three-level">Daniel Wilson</h3>
                 <p class="p-section">UI Designer</p>
@@ -266,11 +298,36 @@
           <ul class="section-four-list">
             <li class="section-four-list-item">
               <div class="img-container">
-                <img
-                  src="./images/BankingApp.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-1@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-1@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-1@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/portfolio-desk-1-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="wrapper-p">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -284,11 +341,36 @@
             </li>
             <li class="section-four-list-item">
               <div class="img-container">
-                <img
-                  src="./images/CashlessPayment.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-2@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-2@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-2@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/portfolio-desk-2-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="wrapper-p">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -302,11 +384,36 @@
             </li>
             <li class="section-four-list-item">
               <div class="img-container">
-                <img
-                  src="./images/MeditationApp.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-3@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-3@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-3@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/portfolio-desk-3-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="wrapper-p">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -320,11 +427,36 @@
             </li>
             <li class="section-four-list-item">
               <div class="img-container">
-                <img
-                  src="./images/TaxiService.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-4@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-4@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-4@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/portfolio-desk-4-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="wrapper-p">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -338,11 +470,36 @@
             </li>
             <li class="section-four-list-item">
               <div class="img-container">
-                <img
-                  src="./images/ScreenIllustrations.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-5@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-5@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-5@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/portfolio-desk-5-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="wrapper-p">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -356,11 +513,36 @@
             </li>
             <li class="section-four-list-item">
               <div class="img-container">
-                <img
-                  src="./images/OnlineCourses.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-6@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-6@2x-min.jpg 2x
+                    "
+                  />
+
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-6@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/portfolio-desk-6-min.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="wrapper-p">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -490,7 +672,12 @@
           </div>
           <div class="modal-div-textarea">
             <label class="lb-name" for="user-comment">Comment</label>
-            <textarea class="modal-textarea" name="user-comment" placeholder="Text input" id="user-comment"></textarea>
+            <textarea
+              class="modal-textarea"
+              name="user-comment"
+              placeholder="Text input"
+              id="user-comment"
+            ></textarea>
           </div>
           <div class="modal-div-check">
             <input
@@ -512,6 +699,60 @@
           </div>
           <button class="modal-btn-end" type="button">Send</button>
         </form>
+      </div>
+    </div>
+    <div class="modal-menu">
+      <div class="menu">
+        <button class="modal-btn" type="button">
+          <svg class="modal-icons" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="menu-list">
+          <li class="menu-list-item">Studio</li>
+          <li class="menu-list-item">Portfolio</li>
+          <li class="menu-list-item">Contacts</li>
+        </ul>
+        <address class="menu-address">
+          <ul class="address-menu">
+            <li>
+              <a href="mailto:info@devstudio.com" class="menu-address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="menu-address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="list-icons-menu">
+          <li class="list-icons-item">
+            <a class="icons-link" href=""
+              ><svg class="icons-item" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use></svg
+            ></a>
+          </li>
+          <li class="list-icons-item">
+            <a class="icons-link" href=""
+              ><svg class="icons-item" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use></svg
+            ></a>
+          </li>
+          <li class="list-icons-item">
+            <a class="icons-link" href=""
+              ><svg class="icons-item" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use></svg
+            ></a>
+          </li>
+          <li class="list-icons-item">
+            <a class="icons-link" href=""
+              ><svg class="icons-item" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use></svg
+            ></a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
