--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </button>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="section-one">
-        <div class="container">
+        <div class="container section-one-container">
           <h1 class="section-one-title">
             Effective Solutions for Your Business
           </h1>
@@ -63,7 +63,7 @@
           </button>
         </div>
       </section>
-      <section class="section-two">
+      <!-- <section class="section-two">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="section-two-list">
