--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </button>
         </div>
       </section>
-      <!-- <section class="section-two">
+      <section class="section-two">
         <div class="container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="section-two-list">
@@ -73,8 +73,8 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="title-three-level">Strategy</h3>
-              <p class="p-section">
+              <h3 class="title-section-two-list">Strategy</h3>
+              <p class="p-section-two">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -85,8 +85,8 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="title-three-level">Punctuality</h3>
-              <p class="p-section">
+              <h3 class="title-section-two-list">Punctuality</h3>
+              <p class="p-section-two">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -97,8 +97,8 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="title-three-level">Diligence</h3>
-              <p class="p-section">
+              <h3 class="title-section-two-list">Diligence</h3>
+              <p class="p-section-two">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
@@ -109,8 +109,8 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="title-three-level">Technologies</h3>
-              <p class="p-section">
+              <h3 class="title-section-two-list">Technologies</h3>
+              <p class="p-section-two">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -118,7 +118,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-three">
+      <!-- <section class="section-three">
         <div class="container">
           <h2 class="title-two-level">Our Team</h2>
           <ul class="section-three-list">
