--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </section>
       <section class="section-two">
-        <div class="container">
+        <div class="container section-two-container">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="section-two-list">
             <li class="section-two-list-item">
@@ -118,9 +118,9 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section-three">
-        <div class="container">
-          <h2 class="title-two-level">Our Team</h2>
+      <section class="section-three">
+        <div class="container section-three-container">
+          <h2 class="title-section-three">Our Team</h2>
           <ul class="section-three-list">
             <li class="section-three-img">
               <img
@@ -133,8 +133,8 @@
                 width="264"
               />
               <div class="name-team">
-                <h3 class="title-three-level">Mark Guerrero</h3>
-                <p class="p-section section-three-p">Product Designer</p>
+                <h3 class="title-team">Mark Guerrero</h3>
+                <p class="section-three-p">Product Designer</p>
                 <ul class="list-icons">
                   <li class="list-icons-item">
                     <a class="icons-link" href=""
@@ -176,8 +176,8 @@
                 width="264"
               />
               <div class="name-team">
-                <h3 class="title-three-level">Tom Ford</h3>
-                <p class="p-section">Frontend Developer</p>
+                <h3 class="title-team">Tom Ford</h3>
+                <p class="section-three-p">Frontend Developer</p>
                 <ul class="list-icons">
                   <li class="list-icons-item">
                     <a class="icons-link" href=""
@@ -219,8 +219,8 @@
                 width="264"
               />
               <div class="name-team">
-                <h3 class="title-three-level">Camila Garcia</h3>
-                <p class="p-section">Marketing</p>
+                <h3 class="title-team">Camila Garcia</h3>
+                <p class="section-three-p">Marketing</p>
                 <ul class="list-icons">
                   <li class="list-icons-item">
                     <a class="icons-link" href=""
@@ -262,8 +262,8 @@
                 width="264"
               />
               <div class="name-team">
-                <h3 class="title-three-level">Daniel Wilson</h3>
-                <p class="p-section">UI Designer</p>
+                <h3 class="title-team">Daniel Wilson</h3>
+                <p class="section-three-p">UI Designer</p>
                 <ul class="list-icons">
                   <li class="list-icons-item">
                     <a class="icons-link" href=""
@@ -297,7 +297,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-four">
+      <!-- <section class="section-four">
         <div class="container">
           <h2 class="title-two-level">Our Portfolio</h2>
           <ul class="section-four-list">
