--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section-four">
-        <div class="container">
-          <h2 class="title-two-level">Our Portfolio</h2>
+      <section class="section-four">
+        <div class="container section-four-container">
+          <h2 class="title-two-level title-section-three">Our Portfolio</h2>
           <ul class="section-four-list">
             <li class="section-four-list-item">
               <div class="img-container">
@@ -340,8 +340,8 @@
                 </p>
               </div>
               <div class="section-four-item">
-                <h3 class="title-three-level">Banking App</h3>
-                <p class="p-section">App</p>
+                <h3 class="title-section-four">Banking App</h3>
+                <p class="p-four">App</p>
               </div>
             </li>
             <li class="section-four-list-item">
@@ -383,8 +383,8 @@
                 </p>
               </div>
               <div class="section-four-item">
-                <h3 class="title-three-level">Cashless Payment</h3>
-                <p class="p-section">Marketing</p>
+                <h3 class="title-section-four">Cashless Payment</h3>
+                <p class="p-four">Marketing</p>
               </div>
             </li>
             <li class="section-four-list-item">
@@ -426,8 +426,8 @@
                 </p>
               </div>
               <div class="section-four-item">
-                <h3 class="title-three-level">Meditation App</h3>
-                <p class="p-section">App</p>
+                <h3 class="title-section-four">Meditation App</h3>
+                <p class="p-four">App</p>
               </div>
             </li>
             <li class="section-four-list-item">
@@ -469,8 +469,8 @@
                 </p>
               </div>
               <div class="section-four-item">
-                <h3 class="title-three-level">Taxi Service</h3>
-                <p class="p-section">Marketing</p>
+                <h3 class="title-section-four">Taxi Service</h3>
+                <p class="p-four">Marketing</p>
               </div>
             </li>
             <li class="section-four-list-item">
@@ -512,8 +512,8 @@
                 </p>
               </div>
               <div class="section-four-item">
-                <h3 class="title-three-level">Screen Illustrations</h3>
-                <p class="p-section">Design</p>
+                <h3 class="title-section-four">Screen Illustrations</h3>
+                <p class="p-four">Design</p>
               </div>
             </li>
             <li class="section-four-list-item">
@@ -555,15 +555,15 @@
                 </p>
               </div>
               <div class="section-four-item">
-                <h3 class="title-three-level">Online Courses</h3>
-                <p class="p-section">Marketing</p>
+                <h3 class="title-section-four">Online Courses</h3>
+                <p class="p-four">Marketing</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
           <a href="./index.html" class="link-logo-footer"
