--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
-      <div class="container">
+    <footer class="footer">
+      <div class="container footer-container">
         <div class="footer-wrapper">
           <a href="./index.html" class="link-logo-footer"
             >Web<span class="logo-color-footer">Studio</span></a
@@ -624,7 +624,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-icons" width="8" height="8">
