--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="modal-overlay">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="modal-btn" type="button">
           <svg class="modal-icons" width="8" height="8">
@@ -710,7 +710,7 @@
         </form>
       </div>
     </div>
-    <div class="modal-menu">
+    <!-- <div class="modal-menu">
       <div class="menu">
         <button class="modal-btn" type="button">
           <svg class="modal-icons" width="8" height="8">
