--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
         </form>
       </div>
     </div>
-    <!-- <div class="modal-menu">
+    <div class="modal-menu">
       <div class="menu">
         <button class="modal-btn" type="button">
           <svg class="modal-icons" width="8" height="8">
@@ -763,6 +763,6 @@
           </li>
         </ul>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
