--- a/index.html
+++ b/index.html
@@ -711,27 +711,27 @@
       </div>
     </div>
     <div class="modal-menu">
-      <div class="menu">
+      <div class="container menu">
         <button class="modal-btn" type="button">
           <svg class="modal-icons" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <ul class="menu-list">
-          <li class="menu-list-item">Studio</li>
-          <li class="menu-list-item">Portfolio</li>
-          <li class="menu-list-item">Contacts</li>
+          <li><a href="" class="menu-list-item active-link">Studio</a></li>
+          <li><a href="" class="menu-list-item">Portfolio</a></li>
+          <li><a href="" class="menu-list-item">Contacts</a></li>
         </ul>
         <address class="menu-address">
           <ul class="address-menu">
             <li>
-              <a href="mailto:info@devstudio.com" class="menu-address-link"
-                >info@devstudio.com</a
+              <a href="tel:+110001111111" class="menu-address-link active-address"
+                >+11 (000) 111-11-11</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="menu-address-link"
-                >+11 (000) 111-11-11</a
+              <a href="mailto:info@devstudio.com" class="menu-address-link"
+                >info@devstudio.com</a
               >
             </li>
           </ul>
