--- a/index.html
+++ b/index.html
@@ -693,16 +693,14 @@
               name="user-privacy"
             />
             <label class="lb-check" for="user-privacy">
-              <div class="check-wrapper">
-                <span class="lb-span">
-                  <svg class="lb-span-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-check"></use>
-                  </svg>
-                </span>
-                <div>
-                  I accept the terms and conditions of the
-                  <a class="modal-link" href="">Privacy Policy</a>
-                </div>
+              <span class="lb-span">
+                <svg class="lb-span-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              <div>
+                I accept the terms and conditions of the
+                <a class="modal-link" href="">Privacy Policy</a>
               </div>
             </label>
           </div>
@@ -725,7 +723,9 @@
         <address class="menu-address">
           <ul class="address-menu">
             <li>
-              <a href="tel:+110001111111" class="menu-address-link active-address"
+              <a
+                href="tel:+110001111111"
+                class="menu-address-link active-address"
                 >+11 (000) 111-11-11</a
               >
             </li>
