--- a/index.html
+++ b/index.html
@@ -698,10 +698,8 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <div>
-                I accept the terms and conditions of the
-                <a class="modal-link" href="">Privacy Policy</a>
-              </div>
+              <p>I accept the terms and conditions of the
+                <a class="modal-link" href="">Privacy Policy</a></p>
             </label>
           </div>
           <button class="modal-btn-end" type="button">Send</button>
