--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <p>I accept the terms and conditions of the
-                <a class="modal-link" href="">Privacy Policy</a></p>
+                I accept the terms and conditions of the &nbsp;
+                <a class="modal-link" href="">Privacy Policy</a>
             </label>
           </div>
           <button class="modal-btn-end" type="button">Send</button>
